ibps-ide/styles/global.css
body {
  height: 100%;
  overflow: hidden;
  @apply cursor-default select-none text-black dark:text-white;
}

html,
body {
  background: transparent;
}

#ibps-ide {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  overflow: hidden;
}

@media print {
  body {
    visibility: hidden;
  }
  #ibpseditor,
  #ibpsdocs {
    visibility: visible;
    position: absolute;
    left: 0;
    top: 0;
  }
}

.ace_gutter {
  @apply bg-idelight-whitish dark:bg-idedark-1000 !important;
}

.ace_gutter-active-line {
  @apply border-none bg-idelight-100 dark:bg-idedark-950 !important;
}

.ace_marker-layer .ace_active-line {
  @apply border-none bg-idelight-100 dark:bg-idedark-950 !important;
}

.ace_marker-layer .ace_selection {
  @apply bg-blue-500 bg-opacity-30 !important;
}

.ace_editor {
  @apply bg-idelight-whitish dark:bg-idedark-1000;
}

#IBPSOutput.ace_editor {
  background: transparent !important;
}

#IBPSOutput .ace_active-line {
  @apply bg-transparent !important;
}

.highlight {
  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
  box-shadow:
    var(--tw-ring-offset-shadow, 0 0 #0000),
    var(--tw-ring-shadow, 0 0 #0000),
    var(--tw-shadow),
    inset 0 1px 1px 0 #ffffff20,
    inset 0 -1px 1px 0 #00000008 !important;
}

